# smplx

./: Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tracking.md
.github/workflows/: clippy.yml  crates.yml  rust.yml
core/: Cargo.toml
core/src/: error.rs  lib.rs
core/src/ops/: glue.rs  mod.rs
core/src/pt/: mod.rs  point.rs  repr.rs
core/src/state/: base_state.rs  kinds.rs  mod.rs
core/src/traits/: mod.rs
core/src/types/: mod.rs
smplx/: Cargo.toml
smplx/examples/: basic.rs
smplx/src/: lib.rs
smplx/src/complex/: mod.rs  object.rs
smplx/src/set/: mod.rs  object.rs
smplx/src/simplex/: mod.rs  n_simplex.rs  object.rs
smplx/src/space/: mod.rs  state.rs  venv.rs
smplx/src/state/: mod.rs  state.rs
smplx/src/state/kinds/: binary.rs
