[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "smplx-core"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "num/alloc",
    "serde?/alloc",
]

rand = [
    "num/rand",
]

serde = [
    "dep:serde",
    "num/serde"
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "num/std",
    "serde?/std",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]

[dependencies.num]
default-features = false
version = "0.4"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
default-features = false
features = ["derive"]
version = "0.26"

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]

