[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "smplx"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

full = [
    "default",
    "ds",
    "serde",
]

### [DS] Data Structures
ds = [
    "hypergraph",
    "petgraph",
]

# [FF] Dependencies
hypergraph = [
    "dep:hypergraph",
]

petgraph = [
    "dep:petgraph",
]

serde = [
    "dep:serde",
    "petgraph?/serde",
    "rstmt/serde",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dev-dependencies]
anyhow.workspace = true
lazy_static.workspace = true

[dependencies]
rstmt.workspace = true # v0.0.2
thiserror.workspace = true

[dependencies.hypergraph]
optional = true
features = []
version = "2.1"

[dependencies.petgraph]
features = []
optional = true
version = "0.6"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]

[target.wasm32-wasi]
