[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "smplx"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

full = [
    "default",
    "serde",
]

# ********* [FF] Dependencies *********
serde = [
    "dep:serde",
    "rstmt/serde",
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
rstmt.workspace = true # v0.0.3
thiserror.workspace = true

[dependencies.serde]
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[dev-dependencies]
anyhow.workspace = true
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
