[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "smplx"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "alloc",
]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "serde?/alloc",
    "smplx-core/alloc",
]

rand = [
    "smplx-core/rand",
]

serde = [
    "dep:serde",
    "smplx-core/serde",
]

# ********* [FF] Environments *********
# std = [
#     "alloc",
#     "serde?/std",
# ]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
thiserror.workspace = true

[dependencies.ndarray]
version = "0.16"

[dependencies.smplx-core]
path = "../core"
version = "0.0.1-nightly"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[dev-dependencies]
anyhow.workspace = true
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
